# Software-Architecture

./: .gitignore  Course work.postman_collection.json  Dockerfile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
AccommodationService/: AccommodationService.sln  AccommodationService.vcxproj  AccommodationService.vcxproj.filters
AccommodationService/Services/UserService/: helper.h
AccommodationService/Services/UserService/Server/: http_request_factory.h
CourseWork/: accommodation.Dockerfile  docker-compose.yml  gateway.Dockerfile  mongo.Dockerfile  order.Dockerfile  postgres.Dockerfile  user.Dockerfile
CourseWork/Code/: get.lua  test.sh  test_result.md
CourseWork/Code/Common/src/Utility/: utility.cpp  utility.h
CourseWork/Code/Database/: commands.sql  mongo-init.js  mongo-init.sh  mongo.Dockerfile  postgres.Dockerfile
CourseWork/Code/Database/src/: database.cpp  database.h
CourseWork/Code/Database/src/Cache/: cache.cpp  cache.h
CourseWork/Code/Database/src/Config/: config.cpp  config.h
CourseWork/Code/Database/src/Models/Accommodation/: accommodation.cpp  accommodation.h
CourseWork/Code/Database/src/Models/Order/: order.cpp  order.h
CourseWork/Code/Database/src/Models/User/: user.cpp  user.h
CourseWork/Code/Gateway/: CMakeLists.txt
CourseWork/Code/Gateway/src/: main.cpp
CourseWork/Code/Gateway/src/Server/: http_web_server.cpp  http_web_server.h
CourseWork/Code/Gateway/src/Server/Requests/: http_request_factory.cpp  http_request_factory.h
CourseWork/Code/Gateway/src/Server/Requests/Handlers/: gateway_handler.cpp  gateway_handler.h
CourseWork/Code/Gateway/src/Server/Tools/: circuit_breaker.cpp  circuit_breaker.h
CourseWork/Code/Services/AccommodationService/: CMakeLists.txt  Dockerfile  index.yaml
CourseWork/Code/Services/AccommodationService/src/: main.cpp
CourseWork/Code/Services/AccommodationService/src/Server/: http_web_server.cpp  http_web_server.h
CourseWork/Code/Services/AccommodationService/src/Server/Requests/: http_request_factory.cpp  http_request_factory.h
CourseWork/Code/Services/AccommodationService/src/Server/Requests/Handlers/: accommodation_handler.cpp  accommodation_handler.h
CourseWork/Code/Services/OrderService/: CMakeLists.txt  Dockerfile  index.yaml
CourseWork/Code/Services/OrderService/src/Server/: http_web_server.h
CourseWork/Code/Services/OrderService/src/Server/Requests/: http_request_factory.cpp  http_request_factory.h
CourseWork/Code/Services/OrderService/src/Server/Requests/Handlers/: order_handler.cpp  order_handler.h
CourseWork/Code/Services/UserService/: CMakeLists.txt  Dockerfile  index.yaml
CourseWork/Code/Services/UserService/src/Server/: http_web_server.cpp
CourseWork/Code/Services/UserService/src/Server/Requests/: http_request_factory.cpp  http_request_factory.h
CourseWork/Code/Services/UserService/src/Server/Requests/Handlers/: user_handler.cpp  user_handler.h
CourseWork/Code/Services/UserService/src/Server/Utility/: utility.h
lab1/: workspace.dsl
lab1/structurizr_on_premises/: docker-compose.yml
lab2/: CMakeLists.txt  Dockerfile  commands.sql  db.Dockerfile  docker-compose.yml  mongo-init.sh
lab2/Services/UserService/: Dockerfile
lab2/Services/UserService/Config/: config.cpp
lab2/Services/UserService/Core/: main.cpp
lab2/Services/UserService/Server/: http_request_factory.h  http_web_server.h
lab2/Services/UserService/Server/handlers/: user_handler.h
lab2/src/: CMakeLists.txt
lab2/src/Services/UserService/Config/: config.h
lab2/src/Services/UserService/Database/: database.cpp  user.cpp  user.h
lab2/src/Services/UserService/Database/Models/: user.cpp  user.h
lab2/src/Services/UserService/Server/: http_request_factory.h  http_web_server.h
lab2/src/Services/UserService/Server/handlers/: user_handler.h
